osc_legacy_parser.output
Terminals unused in grammar

   DOLLARSUB
   OSCADDRESS_DOLLARSUB


Grammar

    0 $accept: bundle $end

    1 bundle: /* empty */
    2       | bundle msg

    3 arglist: STRING
    4        | OSCADDRESS
    5        | OSCFLOAT
    6        | OSCINT32
    7        | OSCUINT32
    8        | OSCINT64
    9        | OSCUINT64
   10        | OSCCHAR
   11        | OSCBOOL
   12        | OSCTIMETAG
   13        | arglist STRING
   14        | arglist OSCADDRESS
   15        | arglist OSCFLOAT
   16        | arglist OSCINT32
   17        | arglist OSCUINT32
   18        | arglist OSCINT64
   19        | arglist OSCUINT64
   20        | arglist OSCCHAR
   21        | arglist OSCBOOL
   22        | arglist OSCTIMETAG
   23        | '[' bundle ']'
   24        | '[' '\n' bundle ']'
   25        | arglist '[' bundle ']'
   26        | arglist '[' '\n' bundle ']'

   27 msg: OSCADDRESS arglist '\n'
   28    | OSCADDRESS '\n'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 24 26 27 28
'[' (91) 23 24 25 26
']' (93) 23 24 25 26
error (256)
OSCFLOAT (258) 5 15
OSCINT32 (259) 6 16
DOLLARSUB (260)
OSCADDRESS_DOLLARSUB (261)
OSCUINT32 (262) 7 17
OSCINT64 (263) 8 18
OSCUINT64 (264) 9 19
OSCCHAR (265) 10 20
STRING (266) 3 13
OSCADDRESS (267) 4 14 27 28
OSCBOOL (268) 11 21
OSCTIMETAG (269) 12 22


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
bundle (19)
    on left: 1 2, on right: 0 2 23 24 25 26
arglist (20)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26, on right: 13 14 15 16 17 18 19 20 21 22 25 26 27
msg (21)
    on left: 27 28, on right: 2


State 0

    0 $accept: . bundle $end
    1 bundle: .
    2       | . bundle msg

    $default  reduce using rule 1 (bundle)

    bundle  go to state 1


State 1

    0 $accept: bundle . $end
    2 bundle: bundle . msg
   27 msg: . OSCADDRESS arglist '\n'
   28    | . OSCADDRESS '\n'

    $end        shift, and go to state 2
    OSCADDRESS  shift, and go to state 3

    msg  go to state 4


State 2

    0 $accept: bundle $end .

    $default  accept


State 3

    3 arglist: . STRING
    4        | . OSCADDRESS
    5        | . OSCFLOAT
    6        | . OSCINT32
    7        | . OSCUINT32
    8        | . OSCINT64
    9        | . OSCUINT64
   10        | . OSCCHAR
   11        | . OSCBOOL
   12        | . OSCTIMETAG
   13        | . arglist STRING
   14        | . arglist OSCADDRESS
   15        | . arglist OSCFLOAT
   16        | . arglist OSCINT32
   17        | . arglist OSCUINT32
   18        | . arglist OSCINT64
   19        | . arglist OSCUINT64
   20        | . arglist OSCCHAR
   21        | . arglist OSCBOOL
   22        | . arglist OSCTIMETAG
   23        | . '[' bundle ']'
   24        | . '[' '\n' bundle ']'
   25        | . arglist '[' bundle ']'
   26        | . arglist '[' '\n' bundle ']'
   27 msg: OSCADDRESS . arglist '\n'
   28    | OSCADDRESS . '\n'

    OSCFLOAT    shift, and go to state 5
    OSCINT32    shift, and go to state 6
    OSCUINT32   shift, and go to state 7
    OSCINT64    shift, and go to state 8
    OSCUINT64   shift, and go to state 9
    OSCCHAR     shift, and go to state 10
    STRING      shift, and go to state 11
    OSCADDRESS  shift, and go to state 12
    OSCBOOL     shift, and go to state 13
    OSCTIMETAG  shift, and go to state 14
    '['         shift, and go to state 15
    '\n'        shift, and go to state 16

    arglist  go to state 17


State 4

    2 bundle: bundle msg .

    $default  reduce using rule 2 (bundle)


State 5

    5 arglist: OSCFLOAT .

    $default  reduce using rule 5 (arglist)


State 6

    6 arglist: OSCINT32 .

    $default  reduce using rule 6 (arglist)


State 7

    7 arglist: OSCUINT32 .

    $default  reduce using rule 7 (arglist)


State 8

    8 arglist: OSCINT64 .

    $default  reduce using rule 8 (arglist)


State 9

    9 arglist: OSCUINT64 .

    $default  reduce using rule 9 (arglist)


State 10

   10 arglist: OSCCHAR .

    $default  reduce using rule 10 (arglist)


State 11

    3 arglist: STRING .

    $default  reduce using rule 3 (arglist)


State 12

    4 arglist: OSCADDRESS .

    $default  reduce using rule 4 (arglist)


State 13

   11 arglist: OSCBOOL .

    $default  reduce using rule 11 (arglist)


State 14

   12 arglist: OSCTIMETAG .

    $default  reduce using rule 12 (arglist)


State 15

    1 bundle: .
    2       | . bundle msg
   23 arglist: '[' . bundle ']'
   24        | '[' . '\n' bundle ']'

    '\n'  shift, and go to state 18

    $default  reduce using rule 1 (bundle)

    bundle  go to state 19


State 16

   28 msg: OSCADDRESS '\n' .

    $default  reduce using rule 28 (msg)


State 17

   13 arglist: arglist . STRING
   14        | arglist . OSCADDRESS
   15        | arglist . OSCFLOAT
   16        | arglist . OSCINT32
   17        | arglist . OSCUINT32
   18        | arglist . OSCINT64
   19        | arglist . OSCUINT64
   20        | arglist . OSCCHAR
   21        | arglist . OSCBOOL
   22        | arglist . OSCTIMETAG
   25        | arglist . '[' bundle ']'
   26        | arglist . '[' '\n' bundle ']'
   27 msg: OSCADDRESS arglist . '\n'

    OSCFLOAT    shift, and go to state 20
    OSCINT32    shift, and go to state 21
    OSCUINT32   shift, and go to state 22
    OSCINT64    shift, and go to state 23
    OSCUINT64   shift, and go to state 24
    OSCCHAR     shift, and go to state 25
    STRING      shift, and go to state 26
    OSCADDRESS  shift, and go to state 27
    OSCBOOL     shift, and go to state 28
    OSCTIMETAG  shift, and go to state 29
    '['         shift, and go to state 30
    '\n'        shift, and go to state 31


State 18

    1 bundle: .
    2       | . bundle msg
   24 arglist: '[' '\n' . bundle ']'

    $default  reduce using rule 1 (bundle)

    bundle  go to state 32


State 19

    2 bundle: bundle . msg
   23 arglist: '[' bundle . ']'
   27 msg: . OSCADDRESS arglist '\n'
   28    | . OSCADDRESS '\n'

    OSCADDRESS  shift, and go to state 3
    ']'         shift, and go to state 33

    msg  go to state 4


State 20

   15 arglist: arglist OSCFLOAT .

    $default  reduce using rule 15 (arglist)


State 21

   16 arglist: arglist OSCINT32 .

    $default  reduce using rule 16 (arglist)


State 22

   17 arglist: arglist OSCUINT32 .

    $default  reduce using rule 17 (arglist)


State 23

   18 arglist: arglist OSCINT64 .

    $default  reduce using rule 18 (arglist)


State 24

   19 arglist: arglist OSCUINT64 .

    $default  reduce using rule 19 (arglist)


State 25

   20 arglist: arglist OSCCHAR .

    $default  reduce using rule 20 (arglist)


State 26

   13 arglist: arglist STRING .

    $default  reduce using rule 13 (arglist)


State 27

   14 arglist: arglist OSCADDRESS .

    $default  reduce using rule 14 (arglist)


State 28

   21 arglist: arglist OSCBOOL .

    $default  reduce using rule 21 (arglist)


State 29

   22 arglist: arglist OSCTIMETAG .

    $default  reduce using rule 22 (arglist)


State 30

    1 bundle: .
    2       | . bundle msg
   25 arglist: arglist '[' . bundle ']'
   26        | arglist '[' . '\n' bundle ']'

    '\n'  shift, and go to state 34

    $default  reduce using rule 1 (bundle)

    bundle  go to state 35


State 31

   27 msg: OSCADDRESS arglist '\n' .

    $default  reduce using rule 27 (msg)


State 32

    2 bundle: bundle . msg
   24 arglist: '[' '\n' bundle . ']'
   27 msg: . OSCADDRESS arglist '\n'
   28    | . OSCADDRESS '\n'

    OSCADDRESS  shift, and go to state 3
    ']'         shift, and go to state 36

    msg  go to state 4


State 33

   23 arglist: '[' bundle ']' .

    $default  reduce using rule 23 (arglist)


State 34

    1 bundle: .
    2       | . bundle msg
   26 arglist: arglist '[' '\n' . bundle ']'

    $default  reduce using rule 1 (bundle)

    bundle  go to state 37


State 35

    2 bundle: bundle . msg
   25 arglist: arglist '[' bundle . ']'
   27 msg: . OSCADDRESS arglist '\n'
   28    | . OSCADDRESS '\n'

    OSCADDRESS  shift, and go to state 3
    ']'         shift, and go to state 38

    msg  go to state 4


State 36

   24 arglist: '[' '\n' bundle ']' .

    $default  reduce using rule 24 (arglist)


State 37

    2 bundle: bundle . msg
   26 arglist: arglist '[' '\n' bundle . ']'
   27 msg: . OSCADDRESS arglist '\n'
   28    | . OSCADDRESS '\n'

    OSCADDRESS  shift, and go to state 3
    ']'         shift, and go to state 39

    msg  go to state 4


State 38

   25 arglist: arglist '[' bundle ']' .

    $default  reduce using rule 25 (arglist)


State 39

   26 arglist: arglist '[' '\n' bundle ']' .

    $default  reduce using rule 26 (arglist)
